Tue Aug 31 03:42:14 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_setup_table): fix bug in r29146.
	  Initialize table even if cflag is 0; tr_find see whether
	  del is empty or not.

	* string.c (tr_find): nodel can't be NULL; if NULL, it means
	  it is not specified.

Mon Aug 30 15:00:13 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_setup_table): initialize negating table when
	  negating string is given. [ruby-core:31851]

	* string.c (tr_find): add a sentence for the time when
	  target characters include negating one.

	* string.c (rb_str_count): move definition.

Sun Aug 29 23:54:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parser/ruby.rb (RDoc#parse_call_parameters): don't
	  include assignment.  [Bug #3759], [ruby-dev:42154]

	* lib/rdoc/parser/ruby.rb (RDoc#parse_class): ignore non-constant
	  name signleton class.  [Bug #3759], [ruby-dev:42154]

Sat Sep 25 22:48:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): fix quoting.

Sat Sep 25 10:30:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): use -unexported_symbol only
	  when available.  http://trac.macports.org/ticket/26341

Sat Oct 16 10:54:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (CPP): already used in .c.i rule.

	* cygwin/GNUmakefile.in (DLLWRAP, WINDRES): add --driver-name and
	  --preprocessor options explicitly.  [ruby-core:32776]

Thu Sep 23 09:01:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_cref_push): no outer cref is needed for proc
	  from method.  Bug #3786, Bug #3860, [ruby-core:32501]

Wed Oct  6 11:52:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fptr_finalize): write_mutex might have been destroyed
	  already in finalization phase, as the order of finalizers is not
	  guaranteed.  rb_mutex_t should be used in place of Mutex object
	  in the future.

Sun Sep 19 13:44:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
